Re-organized data files (to match the distrib's structure)

--- a/src/main/resources/delta/games/lotro/config/locations.properties
+++ b/src/main/resources/delta/games/lotro/config/locations.properties
@@ -2,118 +2,118 @@
 # Paths are relative to a code repositories
 # (works on all of them, provided they are in the same parent directory)
 
-root=../lotro-companion
+root=../lotro-data
 
 # Configuration
 parameters=../lotro-companion/data/config/params.txt
 servers=../lotro-companion/data/config/servers.txt
-serversDescription=../lotro-data/servers/servers.xml
+serversDescription=config/servers.xml
 
 # Basics
-progressions=../lotro-data/common/progressions.xml
-stats=../lotro-data/common/stats.xml
-colors=../lotro-data/common/colors.xml
-enumsDir=../lotro-data/common/enums
-labelsDir=../lotro-data/labels
+progressions=lore/progressions.xml
+stats=lore/stats.xml
+colors=lore/colors.xml
+enumsDir=lore/enums
+labelsDir=lore/labels
 
 # Characters
-traits=../lotro-data/traits/traits.xml
+traits=lore/traits.xml
 traitIcons=../lotro-icons/traits
-skirmishTraits=../lotro-data/traits/skirmishTraits.xml
-statTomes=../lotro-data/traits/statTomes.xml
-virtues=../lotro-data/virtues/virtues.xml
-skills=../lotro-data/skills/skills.xml
+skirmishTraits=lore/skirmishTraits.xml
+statTomes=lore/statTomes.xml
+virtues=lore/virtues.xml
+skills=lore/skills.xml
 skillIcons=../lotro-icons/skills
-classes=../lotro-data/characters/classes.xml
-monsterClasses=../lotro-data/monsters/classes.xml
+classes=lore/classes.xml
+monsterClasses=lore/monsterClasses.xml
 classIcons=../lotro-icons/classes
-traitTrees=../lotro-data/characters/traitTrees.xml
-initialGear=../lotro-data/characters/initialGear.xml
-startStats=../lotro-data/characters/startStats.xml
-statContribs=../lotro-data/characters/statContribs.xml
-races=../lotro-data/characters/races.xml
+traitTrees=lore/traitTrees.xml
+initialGear=lore/initialGear.xml
+startStats=lore/startStats.xml
+statContribs=lore/statContribs.xml
+races=lore/races.xml
 raceIcons=../lotro-icons/races
-nationalities=../lotro-data/characters/nationalities.xml
-buffs=../lotro-data/effects/buffs.xml
-effects=../lotro-data/effects/effects.xml
+nationalities=lore/nationalities.xml
+buffs=lore/buffs.xml
+effects=lore/effects.xml
 effectIconsDir=../lotro-icons/effects
 
 # Combat
-combatData=../lotro-data/common/combat.xml
+combatData=lore/combat.xml
 
 # Crafting
-craftingData=../lotro-data/crafting/crafting.xml
+craftingData=lore/crafting.xml
 
 # Databases
-deeds=../lotro-data/deeds/deeds.xml
-emotes=../lotro-data/emotes/emotes.xml
+deeds=lore/deeds.xml
+emotes=lore/emotes.xml
 emoteIcons=../lotro-icons/emotes
-factions=../lotro-data/common/factions.xml
+factions=lore/factions.xml
 items=../lotro-items-db/items.xml
 itemIcons=../lotro-icons/items
 largeItemIcons=../lotro-icons/largeItems
 socketIcons=../lotro-icons/sockets
-itemCosmetics=../lotro-data/items/cosmetics.xml
-genericItemEffects=../lotro-data/items/genericItemEffects.xml
-sets=../lotro-data/items/sets.xml
-paperItems=../lotro-data/items/paperItems.xml
-valueTables=../lotro-data/items/valueTables.xml
-dpsTables=../lotro-data/items/dpsTables.xml
-speedTables=../lotro-data/items/speedTables.xml
-weaponDamage=../lotro-data/items/weaponDamage.xml
-quests=../lotro-data/quests/quests.xml
-tasks=../lotro-data/quests/tasks.xml
+itemCosmetics=lore/cosmetics.xml
+genericItemEffects=lore/genericItemEffects.xml
+sets=lore/sets.xml
+paperItems=lore/paperItems.xml
+valueTables=lore/valueTables.xml
+dpsTables=lore/dpsTables.xml
+speedTables=lore/speedTables.xml
+weaponDamage=lore/weaponDamage.xml
+quests=lore/quests.xml
+tasks=lore/tasks.xml
 maps=../lotro-maps-db
-recipes=../lotro-data/recipes/recipes.xml
-titles=../lotro-data/titles/titles.xml
+recipes=lore/recipes.xml
+titles=lore/titles.xml
 titleIcons=../lotro-icons/titles
-traitPoints=../lotro-data/characters/traitPoints.xml
-warbands=../lotro-data/warbands/warbands.xml
-allegiances=../lotro-data/allegiances/allegiances.xml
+traitPoints=lore/traitPoints.xml
+warbands=lore/warbands.xml
+allegiances=lore/allegiances.xml
 allegianceIcons=../lotro-icons/allegiances
-collections=../lotro-data/collections/collections.xml
-barters=../lotro-data/trade/barters.xml
-vendors=../lotro-data/trade/vendors.xml
-loots=../lotro-data/loots/loots.xml
-containers=../lotro-data/items/containers.xml
-disenchantments=../lotro-data/items/disenchantments.xml
+collections=lore/collections.xml
+barters=lore/barters.xml
+vendors=lore/vendors.xml
+loots=lore/loots.xml
+containers=lore/containers.xml
+disenchantments=lore/disenchantments.xml
 miscIcons=../lotro-icons/misc
 # - legendary stuff
-legacies=../lotro-data/legendary/legacies.xml
+legacies=lore/legacies.xml
 legaciesIcons=../lotro-icons/legacies
-defaultNonImbuedLegacies=../lotro-data/legendary/defaultNonImbuedLegacies.xml
-nonImbuedLegacies=../lotro-data/legendary/non_imbued_legacies.xml
-passives=../lotro-data/legendary/passives.xml
-passivesUsage=../lotro-data/legendary/passivesUsage.xml
-legendaryData=../lotro-data/legendary/legendarySystem.xml
-legendaryAttrs=../lotro-data/legendary/legendaryAttributes.xml
-legendaryData2=../lotro-data/legendary/legendarySystem2.xml
-traceries=../lotro-data/legendary/traceries.xml
-enhancementRunes=../lotro-data/legendary/enhancementRunes.xml
-legendaryTitles=../lotro-data/legendary/legendary_titles.xml
-relics=../lotro-data/relics/relics.xml
+defaultNonImbuedLegacies=lore/defaultNonImbuedLegacies.xml
+nonImbuedLegacies=lore/non_imbued_legacies.xml
+passives=lore/passives.xml
+passivesUsage=lore/passivesUsage.xml
+legendaryData=lore/legendarySystem.xml
+legendaryAttrs=lore/legendaryAttributes.xml
+legendaryData2=lore/legendarySystem2.xml
+traceries=lore/traceries.xml
+enhancementRunes=lore/enhancementRunes.xml
+legendaryTitles=lore/legendary_titles.xml
+relics=lore/relics.xml
 relicIcons=../lotro-icons/relics
-relicMeldingRecipes=../lotro-data/relics/meldingRecipes.xml
+relicMeldingRecipes=lore/meldingRecipes.xml
 
-consumables=../lotro-data/items/consumables.xml
-privateEncounters=../lotro-data/instances/privateEncounters.xml
-instancesTree=../lotro-data/instances/instancesTree.xml
-instanceLoots=../lotro-data/instances/instanceLoots.xml
-mobs=../lotro-data/agents/mobs.xml
-genericMobLoots=../lotro-data/agents/mobLoots.xml
-NPCs=../lotro-data/agents/NPCs.xml
-billingGroups=../lotro-data/misc/billingGroups.xml
-worldEvents=../lotro-data/misc/worldEvents.xml
-webStoreItems=../lotro-data/misc/webStoreItems.xml
-rewardsTracks=../lotro-data/misc/rewardsTracks.xml
-hobbies=../lotro-data/hobbies/hobbies.xml
+consumables=lore/consumables.xml
+privateEncounters=lore/privateEncounters.xml
+instancesTree=lore/instancesTree.xml
+instanceLoots=lore/instanceLoots.xml
+mobs=lore/mobs.xml
+genericMobLoots=lore/mobLoots.xml
+NPCs=lore/NPCs.xml
+billingGroups=lore/billingGroups.xml
+worldEvents=lore/worldEvents.xml
+webStoreItems=lore/webStoreItems.xml
+rewardsTracks=lore/rewardsTracks.xml
+hobbies=lore/hobbies.xml
 hobbyIcons=../lotro-icons/hobbies
 
 # Maps
-geoAreas=../lotro-data/maps/geoAreas.xml
+geoAreas=lore/geoAreas.xml
 areaIcons=../lotro-icons/areas
-parchmentMaps=../lotro-data/maps/parchmentMaps.xml
-dungeons=../lotro-data/maps/dungeons.xml
-landmarks=../lotro-data/maps/landmarks.xml
-resourcesMaps=../lotro-data/maps/resources.xml
-landblocks=../lotro-data/maps/landblocks.xml
+parchmentMaps=lore/parchmentMaps.xml
+dungeons=lore/dungeons.xml
+landmarks=lore/landmarks.xml
+resourcesMaps=lore/resources.xml
+landblocks=lore/landblocks.xml
