Support for perks (issue LotroCompanion/lotro-companion#595)

--- a/src/main/resources/delta/games/lotro/config/locations.properties
+++ b/src/main/resources/delta/games/lotro/config/locations.properties
@@ -108,6 +108,8 @@ webStoreItems=lore/webStoreItems.xml
 rewardsTracks=lore/rewardsTracks.xml
 hobbies=lore/hobbies.xml
 hobbyIcons=../lotro-icons/hobbies
+perks=lore/perks.xml
+perkIcons=../lotro-icons/perks
 
 # Maps
 geoAreas=lore/geoAreas.xml
