--- a/src/main/resources/delta/games/lotro/config/locations_soa11.properties
+++ b/src/main/resources/delta/games/lotro/config/locations_soa11.properties
@@ -107,6 +107,8 @@ webStoreItems=data/lore/webStoreItems.xml
 rewardsTracks=data/lore/rewardsTracks.xml
 hobbies=data/lore/hobbies.xml
 hobbyIcons=icons/hobbies
+perks=data/lore/perks.xml
+perkIcons=icons/perks
 
 # Maps
 geoAreas=data/lore/geoAreas.xml
