POJO and XML I/O for the XP table

--- a/src/main/resources/delta/games/lotro/config/locations.properties
+++ b/src/main/resources/delta/games/lotro/config/locations.properties
@@ -110,6 +110,7 @@ hobbies=lore/hobbies.xml
 hobbyIcons=../lotro-icons/hobbies
 perks=lore/perks.xml
 perkIcons=../lotro-icons/perks
+xpTable=lore/xp.xml
 
 # Maps
 geoAreas=lore/geoAreas.xml
