--- a/src/main/resources/delta/games/lotro/config/locations_soa11.properties
+++ b/src/main/resources/delta/games/lotro/config/locations_soa11.properties
@@ -109,6 +109,7 @@ hobbies=data/lore/hobbies.xml
 hobbyIcons=icons/hobbies
 perks=data/lore/perks.xml
 perkIcons=icons/perks
+xpTable=lore/xp.xml
 
 # Maps
 geoAreas=data/lore/geoAreas.xml
