Some work on PVP

--- a/src/main/resources/delta/games/lotro/config/locations.properties
+++ b/src/main/resources/delta/games/lotro/config/locations.properties
@@ -111,6 +111,7 @@ hobbyIcons=../lotro-icons/hobbies
 perks=lore/perks.xml
 perkIcons=../lotro-icons/perks
 xpTable=lore/xp.xml
+pvp=lore/pvp.xml
 
 # Maps
 geoAreas=lore/geoAreas.xml
