Use XML files to store mood data

--- a/src/main/resources/delta/games/lotro/config/locations.properties
+++ b/src/main/resources/delta/games/lotro/config/locations.properties
@@ -112,6 +112,7 @@ perks=lore/perks.xml
 perkIcons=../lotro-icons/perks
 xpTable=lore/xp.xml
 pvp=lore/pvp.xml
+mood=lore/mood.xml
 
 # Maps
 geoAreas=lore/geoAreas.xml
