Added a XML writer for action tables

--- a/src/main/resources/delta/games/lotro/config/locations.properties
+++ b/src/main/resources/delta/games/lotro/config/locations.properties
@@ -113,6 +113,7 @@ perkIcons=../lotro-icons/perks
 xpTable=lore/xp.xml
 pvp=lore/pvp.xml
 mood=lore/mood.xml
+actionTables=lore/actionTables.xml
 
 # Maps
 geoAreas=lore/geoAreas.xml
