POJO and XML I/O for the game data ; use it

--- a/src/main/resources/delta/games/lotro/config/locations.properties
+++ b/src/main/resources/delta/games/lotro/config/locations.properties
@@ -10,6 +10,7 @@ servers=../lotro-companion/data/config/servers.txt
 serversDescription=config/servers.xml
 
 # Basics
+gameData=lore/game.xml
 progressions=lore/progressions.xml
 stats=lore/stats.xml
 colors=lore/colors.xml
