Added missing locations for SoA

--- a/src/main/resources/delta/games/lotro/config/locations_soa11.properties
+++ b/src/main/resources/delta/games/lotro/config/locations_soa11.properties
@@ -9,6 +9,7 @@ servers=data/config/servers.txt
 serversDescription=data/config/servers.xml
 
 # Basics
+gameData=data/lore/game.xml
 progressions=data/lore/progressions.xml
 stats=data/lore/stats.xml
 colors=data/lore/colors.xml
@@ -110,6 +111,9 @@ hobbyIcons=icons/hobbies
 perks=data/lore/perks.xml
 perkIcons=icons/perks
 xpTable=lore/xp.xml
+pvp=data/lore/pvp.xml
+mood=data/lore/mood.xml
+actionTables=data/lore/actionTables.xml
 
 # Maps
 geoAreas=data/lore/geoAreas.xml
