Some draft work on detailed skills

--- a/src/main/resources/delta/games/lotro/config/locations.properties
+++ b/src/main/resources/delta/games/lotro/config/locations.properties
@@ -115,6 +115,7 @@ xpTable=lore/xp.xml
 pvp=lore/pvp.xml
 mood=lore/mood.xml
 actionTables=lore/actionTables.xml
+inductions=lore/inductions.xml
 
 # Maps
 geoAreas=lore/geoAreas.xml
