Fix the location of a file for EoA

--- a/src/main/resources/delta/games/lotro/config/locations_soa11.properties
+++ b/src/main/resources/delta/games/lotro/config/locations_soa11.properties
@@ -110,7 +110,7 @@ hobbies=data/lore/hobbies.xml
 hobbyIcons=icons/hobbies
 perks=data/lore/perks.xml
 perkIcons=icons/perks
-xpTable=lore/xp.xml
+xpTable=data/lore/xp.xml
 pvp=data/lore/pvp.xml
 mood=data/lore/mood.xml
 actionTables=data/lore/actionTables.xml
