Initial working version of the skill attack damage computer (tested on 2H yellow champ)

--- a/src/main/resources/delta/games/lotro/config/locations.properties
+++ b/src/main/resources/delta/games/lotro/config/locations.properties
@@ -24,6 +24,7 @@ skirmishTraits=lore/skirmishTraits.xml
 statTomes=lore/statTomes.xml
 virtues=lore/virtues.xml
 skills=lore/skills.xml
+skillDetails=lore/skillsDetails.xml
 skillIcons=../lotro-icons/skills
 classes=lore/classes.xml
 monsterClasses=lore/monsterClasses.xml
