Added pip POJO and associated XML I/O

--- a/src/main/resources/delta/games/lotro/config/locations.properties
+++ b/src/main/resources/delta/games/lotro/config/locations.properties
@@ -117,6 +117,7 @@ pvp=lore/pvp.xml
 mood=lore/mood.xml
 actionTables=lore/actionTables.xml
 inductions=lore/inductions.xml
+pips=lore/pips.xml
 
 # Maps
 geoAreas=lore/geoAreas.xml
