Added missing file locations for EOA

--- a/src/main/resources/delta/games/lotro/config/locations_soa11.properties
+++ b/src/main/resources/delta/games/lotro/config/locations_soa11.properties
@@ -23,6 +23,7 @@ skirmishTraits=data/lore/skirmishTraits.xml
 statTomes=data/lore/statTomes.xml
 virtues=data/lore/virtues.xml
 skills=data/lore/skills.xml
+skillDetails=data/lore/skillsDetails.xml
 skillIcons=icons/skills
 classes=data/lore/classes.xml
 monsterClasses=data/lore/monsterClasses.xml
@@ -114,6 +115,8 @@ xpTable=data/lore/xp.xml
 pvp=data/lore/pvp.xml
 mood=data/lore/mood.xml
 actionTables=data/lore/actionTables.xml
+inductions=data/lore/inductions.xml
+pips=data/lore/pips.xml
 
 # Maps
 geoAreas=data/lore/geoAreas.xml
