--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,11 @@
       <version>1.0</version>
     </dependency>
     <dependency>
+      <groupId>com.dam.delta4j</groupId>
+      <artifactId>delta-lotro-values</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
       <version>2.0.16</version>
