Added a POJO and XML I/O for a directory of managed enums

--- a/src/main/resources/delta/games/lotro/config/locations.properties
+++ b/src/main/resources/delta/games/lotro/config/locations.properties
@@ -15,6 +15,7 @@ progressions=lore/progressions.xml
 stats=lore/stats.xml
 colors=lore/colors.xml
 enumsDir=lore/enums
+enumsDirectory=lore/enums/directory.xml
 labelsDir=lore/labels
 
 # Characters
