--- a/src/main/resources/delta/games/lotro/config/locations_soa11.properties
+++ b/src/main/resources/delta/games/lotro/config/locations_soa11.properties
@@ -14,6 +14,7 @@ progressions=data/lore/progressions.xml
 stats=data/lore/stats.xml
 colors=data/lore/colors.xml
 enumsDir=data/lore/enums
+enumsDirectory=data/lore/enums/directory.xml
 labelsDir=data/lore/labels
 
 # Characters
