--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,12 @@
       <version>2.0.16</version>
     </dependency>
     <dependency>
+      <groupId>com.dam.delta4j</groupId>
+      <artifactId>delta-utils-statistics</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
         <groupId>ch.qos.logback</groupId>
         <artifactId>logback-core</artifactId>
         <version>1.3.14</version>
