Added the housing manager. Finalize the XML writer for housing data.

--- a/src/main/resources/delta/games/lotro/config/locations.properties
+++ b/src/main/resources/delta/games/lotro/config/locations.properties
@@ -118,6 +118,8 @@ mood=lore/mood.xml
 actionTables=lore/actionTables.xml
 inductions=lore/inductions.xml
 pips=lore/pips.xml
+housing=lore/housing.xml
+housingIcons=../lotro-icons/housing
 
 # Maps
 geoAreas=lore/geoAreas.xml
