--- a/src/main/resources/delta/games/lotro/config/locations_soa11.properties
+++ b/src/main/resources/delta/games/lotro/config/locations_soa11.properties
@@ -117,6 +117,8 @@ mood=data/lore/mood.xml
 actionTables=data/lore/actionTables.xml
 inductions=data/lore/inductions.xml
 pips=data/lore/pips.xml
+housing=lore/housing.xml
+housingIcons=icons/housing
 
 # Maps
 geoAreas=data/lore/geoAreas.xml
