--- a/src/main/resources/delta/games/lotro/config/locations.properties
+++ b/src/main/resources/delta/games/lotro/config/locations.properties
@@ -120,6 +120,7 @@ inductions=lore/inductions.xml
 pips=lore/pips.xml
 housing=lore/housing.xml
 housingIcons=../lotro-icons/housing
+baubles=lore/baubles.xml
 
 # Maps
 geoAreas=lore/geoAreas.xml
