--- a/src/main/resources/delta/games/lotro/config/locations_soa11.properties
+++ b/src/main/resources/delta/games/lotro/config/locations_soa11.properties
@@ -119,6 +119,7 @@ inductions=data/lore/inductions.xml
 pips=data/lore/pips.xml
 housing=data/lore/housing.xml
 housingIcons=icons/housing
+baubles=data/lore/baubles.xml
 
 # Maps
 geoAreas=data/lore/geoAreas.xml
