Added a POJO and XML I/O for birds (issue LotroCompanion/lotro-companion#656)

--- a/src/main/resources/delta/games/lotro/config/locations.properties
+++ b/src/main/resources/delta/games/lotro/config/locations.properties
@@ -121,6 +121,7 @@ pips=lore/pips.xml
 housing=lore/housing.xml
 housingIcons=../lotro-icons/housing
 baubles=lore/baubles.xml
+birds=lore/birds.xml
 
 # Maps
 geoAreas=lore/geoAreas.xml
