--- a/src/main/resources/delta/games/lotro/config/locations_soa11.properties
+++ b/src/main/resources/delta/games/lotro/config/locations_soa11.properties
@@ -120,6 +120,7 @@ pips=data/lore/pips.xml
 housing=data/lore/housing.xml
 housingIcons=icons/housing
 baubles=data/lore/baubles.xml
+birds=data/lore/birds.xml
 
 # Maps
 geoAreas=data/lore/geoAreas.xml
