Added the location of the bird icons

--- a/src/main/resources/delta/games/lotro/config/locations.properties
+++ b/src/main/resources/delta/games/lotro/config/locations.properties
@@ -122,6 +122,7 @@ housing=lore/housing.xml
 housingIcons=../lotro-icons/housing
 baubles=lore/baubles.xml
 birds=lore/birds.xml
+birdIconsDir=../lotro-icons/birds
 
 # Maps
 geoAreas=lore/geoAreas.xml
