--- a/src/main/resources/delta/games/lotro/config/locations_soa11.properties
+++ b/src/main/resources/delta/games/lotro/config/locations_soa11.properties
@@ -121,6 +121,7 @@ housing=data/lore/housing.xml
 housingIcons=icons/housing
 baubles=data/lore/baubles.xml
 birds=data/lore/birds.xml
+birdIconsDir=icons/birds
 
 # Maps
 geoAreas=data/lore/geoAreas.xml
