Some work on the travels web (issue LotroCompanion/lotro-companion#683)

--- a/src/main/resources/delta/games/lotro/config/locations.properties
+++ b/src/main/resources/delta/games/lotro/config/locations.properties
@@ -121,6 +121,7 @@ housingIcons=../lotro-icons/housing
 baubles=lore/baubles.xml
 birds=lore/birds.xml
 birdIconsDir=../lotro-icons/birds
+travelsWeb=lore/travels.xml
 
 # Maps
 geoAreas=lore/geoAreas.xml
