Added a POJO and XML I/O for travel NPCs (issue LotroCompanion/lotro-companion#683)

--- a/src/main/resources/delta/games/lotro/config/locations.properties
+++ b/src/main/resources/delta/games/lotro/config/locations.properties
@@ -74,6 +74,7 @@ allegianceIcons=../lotro-icons/allegiances
 collections=lore/collections.xml
 barters=lore/barters.xml
 vendors=lore/vendors.xml
+travelNPCs=lore/travelNPCs.xml
 loots=lore/loots.xml
 containers=lore/containers.xml
 disenchantments=lore/disenchantments.xml
