Added XML I/O for the travels map data (issue LotroCompanion/lotro-companion#688)

--- a/src/main/resources/delta/games/lotro/config/locations.properties
+++ b/src/main/resources/delta/games/lotro/config/locations.properties
@@ -123,6 +123,7 @@ baubles=lore/baubles.xml
 birds=lore/birds.xml
 birdIconsDir=../lotro-icons/birds
 travelsWeb=lore/travels.xml
+travelsMap=lore/travelsMap.xml
 
 # Maps
 geoAreas=lore/geoAreas.xml
