Update travels code to let it work for EoA

--- a/src/main/resources/delta/games/lotro/config/locations_soa11.properties
+++ b/src/main/resources/delta/games/lotro/config/locations_soa11.properties
@@ -74,6 +74,7 @@ allegianceIcons=icons/allegiances
 collections=data/lore/collections.xml
 barters=data/lore/barters.xml
 vendors=data/lore/vendors.xml
+travelNPCs=data/lore/travelNPCs.xml
 loots=data/lore/loots.xml
 containers=data/lore/containers.xml
 disenchantments=data/lore/disenchantments.xml
@@ -121,6 +122,8 @@ housingIcons=icons/housing
 baubles=data/lore/baubles.xml
 birds=data/lore/birds.xml
 birdIconsDir=icons/birds
+travelsWeb=data/lore/travels.xml
+travelsMap=data/lore/travelsMap.xml
 
 # Maps
 geoAreas=data/lore/geoAreas.xml
